# httpx-client

./: EXAMPLES.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
api_client/config/: api_config.py
api_client/config/tests/: test_api_config.py
api_client/core/: async_client.py  client.py  sync_client.py
src/api_client/config/: api_config.py
src/api_client/core/: async_client.py  base_client.py  client.py  sync_client.py
tests/config/: test_api_config.py
tests/core/: test_async_client.py  test_base_client.py  test_sync_client.py
