[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_client"
version = "0.1.0"
description = "A highly customizable and easy-to-use API client built on top of httpx."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
keywords = ["api", "client", "httpx", "pydantic", "development"]
authors = [
  {name = "Amit Afre", email = "cyberathelet3@gmail.com"}
]
maintainers = [
  {name = "Amit Afre", email = "cyberathelet3@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "black>=23.3.0",
  "httpx",
  "loguru>=0.7.3",
  "pydantic",
  "pydantic-settings",
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
  "ruff>=0.11.11",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[project.urls]
"Homepage" = "https://github.com/aafre/APIClient"
"Bug Reports" = "https://github.com/aafre/APIClient/issues"
"Source" = "https://github.com/aafre/APIClient"

[tool.setuptools.packages.find]
where = ["api_client"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Directories where pytest will look for tests
testpaths = [
  "api_client/config/tests",
  "api_client/core/tests"
]
# File pattern for test modules
python_files = [
  "test_*.py"
]
# Naming pattern for test functions
python_functions = [
  "test_*"
]
# (Optional) Naming pattern for test classes
python_classes = [
  "*Tests"
]
