[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api_client"
version = "0.1.0"
description = "A highly customizable and easy-to-use API client built on top of httpx."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
keywords = ["api", "client", "httpx", "pydantic", "development"]
authors = [
  { name = "Amit Afre", email = "cyberathelet3@gmail.com" }
]
maintainers = [
  { name = "Amit Afre", email = "cyberathelet3@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "httpx",
  "loguru>=0.7.3",
  "pydantic",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4",
  "pytest-asyncio",
  "pytest-cov>=4.1.0",
  "black>=23.3.0",
  "ruff>=0.11.11",
]

[project.urls]
"Homepage" = "https://github.com/aafre/APIClient"
"Bug Reports" = "https://github.com/aafre/APIClient/issues"
"Source" = "https://github.com/aafre/APIClient"

[tool.setuptools.packages.find]
where  = ["src"]
include = ["api_client*"]


# pytest discovery settings (optional if you switch tests to top-level `tests/`)
[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["*Tests"]

# Hatchling-specific build settings
[tool.hatch.build]
# make your working copy importable in dev mode
dev-mode-dirs = ["api_client"]
